--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -6,18 +6,15 @@ on:
     paths:
       - "tasky-main/**"
       - ".github/workflows/app.yml"
-
   push:
     branches: ["main"]
     paths:
       - "tasky-main/**"
       - ".github/workflows/app.yml"
-
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 jobs:
   build_scan_push_deploy:
-    name: Build, Scan, Push, Deploy (Tasky)
     runs-on: ubuntu-latest
 
     permissions:
@@ -26,99 +23,153 @@ jobs:
       security-events: write
       actions: read
 
-    # Defaults first, then secrets override if present
     env:
-      AWS_REGION: ${{ secrets.AWS_REGION != '' && secrets.AWS_REGION || 'us-east-1' }}
-      EKS_CLUSTER_NAME: ${{ secrets.EKS_CLUSTER_NAME != '' && secrets.EKS_CLUSTER_NAME || 'wiz-exercise' }}
-      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY != '' && secrets.ECR_REPOSITORY || 'wiz-exercise-tasky' }}
-      IMAGE_TAG: ${{ github.sha }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      EKS_CLUSTER_NAME: wiz-exercise
+      ECR_REPO: wiz-exercise-tasky
+      K8S_NAMESPACE: tasky
+      DEPLOYMENT_NAME: tasky
+      CONTAINER_NAME: tasky
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Sanity check required config
+      - name: Fail fast if required secrets are missing
         run: |
-          echo "AWS_REGION=${AWS_REGION}"
-          echo "EKS_CLUSTER_NAME=${EKS_CLUSTER_NAME}"
-          echo "ECR_REPOSITORY=${ECR_REPOSITORY}"
-          echo "IMAGE_TAG=${IMAGE_TAG}"
-
-          if [ -z "${AWS_REGION}" ] || [ -z "${EKS_CLUSTER_NAME}" ] || [ -z "${ECR_REPOSITORY}" ]; then
-            echo "ERROR: One or more required env vars are empty (AWS_REGION/EKS_CLUSTER_NAME/ECR_REPOSITORY)."
-            echo "Set them as repo secrets OR rely on the defaults in this workflow."
+          if [ -z "${{ secrets.AWS_REGION }}" ]; then
+            echo "Missing required secret: AWS_REGION"
             exit 1
           fi
+          if [ -z "${{ secrets.AWS_ROLE_TO_ASSUME }}" ]; then
+            echo "Missing required secret: AWS_ROLE_TO_ASSUME"
+            exit 1
+          fi
+          echo "Secrets look present (values are masked)."
+
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          audience: sts.amazonaws.com
 
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
+      - name: Verify AWS identity
+        run: aws sts get-caller-identity
 
-      - name: Build image
+      - name: Install Podman
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y podman
+
+      - name: Set image URIs
+        id: img
+        run: |
+          ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
+          ECR_REGISTRY="${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+
+          IMAGE_URI="${ECR_REGISTRY}/${ECR_REPO}:${GITHUB_SHA}"
+          IMAGE_URI_LATEST="${ECR_REGISTRY}/${ECR_REPO}:latest"
+
+          echo "ECR_REGISTRY=${ECR_REGISTRY}" >> "$GITHUB_ENV"
+          echo "IMAGE_URI=${IMAGE_URI}" >> "$GITHUB_ENV"
+          echo "IMAGE_URI_LATEST=${IMAGE_URI_LATEST}" >> "$GITHUB_ENV"
+
+          echo "image=${IMAGE_URI}" >> "$GITHUB_OUTPUT"
+
+      - name: Build image with Podman (inject commit SHA)
         working-directory: tasky-main
         run: |
-          echo "Building image..."
-          docker build -t "${ECR_REPOSITORY}:${IMAGE_TAG}" .
+          podman build \
+            --build-arg GIT_SHA="${GITHUB_SHA}" \
+            -t "${IMAGE_URI}" \
+            -f Dockerfile .
 
-      # Optional: Scan built image (non-blocking)
-      - name: Trivy image scan
-        uses: aquasecurity/trivy-action@0.24.0
-        continue-on-error: true
+      - name: Export image to tar for Trivy
+        run: |
+          mkdir -p /tmp/images
+          podman save -o /tmp/images/tasky-image.tar "${IMAGE_URI}"
+
+      - name: Trivy image scan (SARIF, report-only)
+        uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-          severity: CRITICAL,HIGH
+          input: /tmp/images/tasky-image.tar
           format: sarif
-          output: trivy-image.sarif
-
-      - name: Upload Trivy image scan results
-        uses: github/codeql-action/upload-sarif@v3
+          output: trivy.sarif
+          vuln-type: os,library
+          severity: CRITICAL,HIGH
+          exit-code: "0"
         continue-on-error: true
+
+      - name: Upload Trivy SARIF artifact (always)
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          sarif_file: trivy-image.sarif
+          name: trivy-sarif
+          path: trivy.sarif
 
-      - name: Tag image for ECR
+      - name: Upload Trivy SARIF (best-effort, push-only)
+        if: github.event_name == 'push'
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: trivy.sarif
+        continue-on-error: true
+
+      - name: Login to Amazon ECR (Podman)
         run: |
-          AWS_ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
-          ECR_REGISTRY="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
-          FULL_IMAGE="${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}"
+          aws ecr get-login-password --region "${AWS_REGION}" \
+            | podman login --username AWS --password-stdin "${ECR_REGISTRY}"
 
-          echo "AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID}" >> $GITHUB_ENV
-          echo "ECR_REGISTRY=${ECR_REGISTRY}" >> $GITHUB_ENV
-          echo "FULL_IMAGE=${FULL_IMAGE}" >> $GITHUB_ENV
-
-          echo "Tagging -> ${FULL_IMAGE}"
-          docker tag "${ECR_REPOSITORY}:${IMAGE_TAG}" "${FULL_IMAGE}"
-
-      - name: Push image to ECR
+      - name: Push image to ECR (SHA + latest)
         run: |
-          echo "Pushing ${FULL_IMAGE}"
-          docker push "${FULL_IMAGE}"
+          podman push "${IMAGE_URI}"
+          podman tag "${IMAGE_URI}" "${IMAGE_URI_LATEST}"
+          podman push "${IMAGE_URI_LATEST}"
 
-      - name: Create kubeconfig for EKS
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+          version: v1.29.0
+
+      - name: Update kubeconfig for EKS
         run: |
-          aws eks update-kubeconfig --name "${EKS_CLUSTER_NAME}" --region "${AWS_REGION}"
-          kubectl get ns | head -n 20
+          aws eks update-kubeconfig \
+            --name "${EKS_CLUSTER_NAME}" \
+            --region "${AWS_REGION}"
 
-      - name: Deploy to EKS
+      - name: Deploy updated image
         run: |
-          echo "Deploying image: ${FULL_IMAGE}"
-          kubectl -n tasky set image deployment/tasky tasky="${FULL_IMAGE}"
+          kubectl -n "${K8S_NAMESPACE}" set image "deployment/${DEPLOYMENT_NAME}" \
+            "${CONTAINER_NAME}=${IMAGE_URI}"
 
-          kubectl -n tasky rollout status deployment/tasky --timeout=300s || {
-            echo "Rollout timed out or failed. Diagnostics:"
-            kubectl -n tasky get pods -o wide || true
-            kubectl -n tasky get rs || true
-            kubectl -n tasky describe deploy tasky | sed -n '1,220p' || true
-            kubectl -n tasky get events --sort-by=.metadata.creationTimestamp | tail -n 50 || true
+          kubectl -n "${K8S_NAMESPACE}" rollout status \
+            "deployment/${DEPLOYMENT_NAME}" \
+            --timeout=300s
+
+      - name: Verify wizexercise.txt exists
+        run: |
+          echo "Pods (with labels):"
+          kubectl -n "${K8S_NAMESPACE}" get pods --show-labels || true
+
+          POD="$(kubectl -n "${K8S_NAMESPACE}" get pods -l app=tasky -o jsonpath='{.items[0].metadata.name}' 2>/dev/null || true)"
+
+          if [ -z "$POD" ]; then
+            echo "Falling back to deployment selector..."
+            SELECTOR="$(kubectl -n "${K8S_NAMESPACE}" get deploy "${DEPLOYMENT_NAME}" \
+              -o jsonpath='{range $k,$v := .spec.selector.matchLabels}{printf "%s=%s," $k $v}{end}' \
+              | sed 's/,$//')"
+
+            POD="$(kubectl -n "${K8S_NAMESPACE}" get pods -l "${SELECTOR}" \
+              -o jsonpath='{.items[0].metadata.name}' 2>/dev/null || true)"
+          fi
+
+          if [ -z "$POD" ]; then
+            echo "ERROR: No pod found for deployment ${DEPLOYMENT_NAME}"
             exit 1
-          }
+          fi
 
-      - name: Show service/ingress
-        run: |
-          kubectl -n tasky get svc -o wide || true
-          kubectl -n tasky get ingress -o wide || true
+          kubectl -n "${K8S_NAMESPACE}" wait \
+            --for=condition=Ready "pod/${POD}" \
+            --timeout=120s
+
+          kubectl -n "${K8S_NAMESPACE}" exec "${POD}" -- cat /app/wizexercise.txt
