--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -49,6 +49,10 @@ jobs:
       TF_VAR_github_org: ${{ vars.TF_GITHUB_ORG }}
       TF_VAR_github_repo: ${{ vars.TF_GITHUB_REPO }}
 
+      # ✅ Ensure CI matches existing deployed state (prevents CI-only "destroy" drift)
+      TF_VAR_enable_securityhub: "true"
+      TF_VAR_create_guardduty_detector: "true"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
