--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,12 @@ __pycache__/
 *.log
 
 ############################
+# Exercise artifacts
+############################
+
+Wiz_Tech_Exercise_V4.pdf
+
+############################
 # Secrets & backups
 ############################
 
