--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -15,7 +15,7 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  build_scan_push_deploy:
+  build_scan_push:
     # CI job for the Tasky image and deployment.
     runs-on: ubuntu-latest
 
@@ -34,12 +34,17 @@ jobs:
       DEPLOYMENT_NAME: tasky
       CONTAINER_NAME: tasky
 
+    outputs:
+      # Pass the image tag to the deploy job.
+      image_sha: ${{ steps.vars.outputs.image_sha }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       # Validate required secrets.
       - name: Fail fast if required secrets are missing
+        if: github.event_name != 'pull_request'
         shell: bash
         run: |
           set -euo pipefail
@@ -53,6 +58,7 @@ jobs:
           fi
 
       - name: Configure AWS credentials (GitHub OIDC)
+        if: github.event_name != 'pull_request'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
@@ -72,13 +78,23 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
-          echo "account_id=$ACCOUNT_ID" >> "$GITHUB_OUTPUT"
-          echo "repo_uri=${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}" >> "$GITHUB_OUTPUT"
-          echo "image_sha=${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
-          echo "image_latest=${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:latest" >> "$GITHUB_OUTPUT"
+
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            # PR run: local tags only (no AWS/ECR)
+            echo "repo_uri=local/${ECR_REPO}" >> "$GITHUB_OUTPUT"
+            echo "image_sha=tasky:${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
+            echo "image_latest=tasky:pr" >> "$GITHUB_OUTPUT"
+          else
+            # Deploy run: ECR tags (requires AWS auth)
+            ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
+            echo "account_id=$ACCOUNT_ID" >> "$GITHUB_OUTPUT"
+            echo "repo_uri=${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}" >> "$GITHUB_OUTPUT"
+            echo "image_sha=${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
+            echo "image_latest=${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:latest" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Login to Amazon ECR (podman)
+        if: github.event_name != 'pull_request'
         shell: bash
         run: |
           set -euo pipefail
@@ -121,11 +137,39 @@ jobs:
 
       # Push both SHA and latest tags.
       - name: Push image to ECR (podman)
+        if: github.event_name != 'pull_request'
         shell: bash
         run: |
           set -euo pipefail
           podman push "${{ steps.vars.outputs.image_sha }}"
           podman push "${{ steps.vars.outputs.image_latest }}"
+
+  deploy:
+    # Production deployment gate using GitHub Environments.
+    if: github.event_name != 'pull_request'
+    needs: build_scan_push
+    runs-on: ubuntu-latest
+    environment: production
+
+    permissions:
+      id-token: write
+      contents: read
+
+    env:
+      # Runtime inputs for build and deploy steps.
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      EKS_CLUSTER_NAME: wiz-exercise
+      K8S_NAMESPACE: tasky
+      DEPLOYMENT_NAME: tasky
+      CONTAINER_NAME: tasky
+      IMAGE_SHA: ${{ needs.build_scan_push.outputs.image_sha }}
+
+    steps:
+      - name: Configure AWS credentials (GitHub OIDC)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       # Configure kubectl for the target cluster.
       - name: Configure kubeconfig for EKS
@@ -140,7 +184,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          kubectl -n "${K8S_NAMESPACE}" set image "deployment/${DEPLOYMENT_NAME}" "${CONTAINER_NAME}=${{ steps.vars.outputs.image_sha }}"
+          kubectl -n "${K8S_NAMESPACE}" set image "deployment/${DEPLOYMENT_NAME}" "${CONTAINER_NAME}=${IMAGE_SHA}"
           kubectl -n "${K8S_NAMESPACE}" rollout status "deployment/${DEPLOYMENT_NAME}" --timeout=180s
 
       # Verify the file generated during the image build.
