--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -36,7 +36,7 @@ jobs:
 
     outputs:
       # Pass the image tag to the deploy job.
-      image_sha: ${{ steps.vars.outputs.image_sha }}
+      image_sha: ${{ steps.export.outputs.image_sha }}
 
     steps:
       - name: Checkout
@@ -98,6 +98,14 @@ jobs:
             echo "image_latest=${REPO_URI}:latest" >> "$GITHUB_OUTPUT"
           fi
 
+      # Export image SHA for downstream deploy job (job outputs are read-only)
+      - name: Export image sha
+        id: export
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "image_sha=${{ steps.vars.outputs.image_sha }}" >> "$GITHUB_OUTPUT"
+
       - name: Login to Amazon ECR (podman)
         if: github.event_name != 'pull_request'
         shell: bash
@@ -116,7 +124,6 @@ jobs:
         run: |
           set -euo pipefail
           podman save --format docker-archive -o image.tar "${{ steps.vars.outputs.image_sha }}"
-          ls -lh image.tar
 
       # Scan the image archive and publish SARIF.
       - name: Trivy scan image archive (SARIF)
@@ -184,6 +191,16 @@ jobs:
           aws eks update-kubeconfig --name "${EKS_CLUSTER_NAME}" --region "${AWS_REGION}"
           kubectl version --client=true
 
+      # Fail fast if image output did not propagate
+      - name: Validate image input
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ -z "${IMAGE_SHA}" ]; then
+            echo "IMAGE_SHA is empty; build job output did not propagate."
+            exit 1
+          fi
+
       # Update the deployment to the new image.
       - name: Deploy updated image to Kubernetes
         shell: bash
@@ -198,5 +215,4 @@ jobs:
         run: |
           set -euo pipefail
           POD="$(kubectl -n "${K8S_NAMESPACE}" get pods -l app="${DEPLOYMENT_NAME}" -o jsonpath='{.items[0].metadata.name}')"
-          echo "Using pod: ${POD}"
           kubectl -n "${K8S_NAMESPACE}" exec "${POD}" -- cat /app/wizexercise.txt
