Gate production deploy behind manual workflow dispatch

--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -12,11 +12,19 @@ on:
     paths:
       - "tasky-main/**"
       - ".github/workflows/app.yml"
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      deploy:
+        description: "Deploy image to production"
+        required: true
+        default: "true"
+        type: choice
+        options:
+          - "true"
 
 jobs:
   build_scan_push_deploy:
-    # CI job for the Tasky image and deployment.
+    # CI job for the Tasky image.
     runs-on: ubuntu-latest
 
     permissions:
@@ -26,7 +34,7 @@ jobs:
       actions: read
 
     env:
-      # Runtime inputs for build and deploy steps.
+      # Runtime inputs for build steps.
       AWS_REGION: ${{ secrets.AWS_REGION }}
       EKS_CLUSTER_NAME: wiz-exercise
       ECR_REPO: wiz-exercise-tasky
@@ -86,7 +94,7 @@ jobs:
             echo "image_sha=tasky:${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
             echo "image_latest=tasky:pr" >> "$GITHUB_OUTPUT"
           else
-            # Deploy run: ECR tags (requires AWS auth)
+            # Main branch build: ECR tags
             ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
             ECR_REGISTRY="${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
             REPO_URI="${ECR_REGISTRY}/${ECR_REPO}"
@@ -98,7 +106,7 @@ jobs:
             echo "image_latest=${REPO_URI}:latest" >> "$GITHUB_OUTPUT"
           fi
 
-      # Export image SHA for downstream deploy job (job outputs are read-only)
+      # Export image SHA for downstream deploy job
       - name: Export image sha
         id: export
         shell: bash
@@ -111,13 +119,17 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          aws ecr get-login-password --region "${AWS_REGION}" | podman login --username AWS --password-stdin "${{ steps.vars.outputs.ecr_registry }}"
+          aws ecr get-login-password --region "${AWS_REGION}" \
+            | podman login --username AWS --password-stdin "${{ steps.vars.outputs.ecr_registry }}"
 
       - name: Build image (podman)
         shell: bash
         run: |
           set -euo pipefail
-          podman build -t "${{ steps.vars.outputs.image_sha }}" -t "${{ steps.vars.outputs.image_latest }}" tasky-main
+          podman build \
+            -t "${{ steps.vars.outputs.image_sha }}" \
+            -t "${{ steps.vars.outputs.image_latest }}" \
+            tasky-main
 
       - name: Save image to archive (for Trivy)
         shell: bash
@@ -140,13 +152,6 @@ jobs:
           if-no-files-found: error
           retention-days: 7
 
-      # Show scan output in logs.
-      - name: Trivy scan image archive (table)
-        shell: bash
-        run: |
-          set -euo pipefail
-          trivy image --input image.tar --format table
-
       # Push both SHA and latest tags.
       - name: Push image to ECR (podman)
         if: github.event_name != 'pull_request'
@@ -157,8 +162,8 @@ jobs:
           podman push "${{ steps.vars.outputs.image_latest }}"
 
   deploy:
-    # Production deployment gate using GitHub Environments.
-    if: github.event_name != 'pull_request'
+    # Production deployment (manual only).
+    if: github.event_name == 'workflow_dispatch'
     needs: build_scan_push_deploy
     runs-on: ubuntu-latest
     environment: production
@@ -168,7 +173,7 @@ jobs:
       contents: read
 
     env:
-      # Runtime inputs for build and deploy steps.
+      # Runtime inputs for deploy steps.
       AWS_REGION: ${{ secrets.AWS_REGION }}
       EKS_CLUSTER_NAME: wiz-exercise
       K8S_NAMESPACE: tasky
@@ -191,7 +196,7 @@ jobs:
           aws eks update-kubeconfig --name "${EKS_CLUSTER_NAME}" --region "${AWS_REGION}"
           kubectl version --client=true
 
-      # Fail fast if image output did not propagate
+      # Validate image input
       - name: Validate image input
         shell: bash
         run: |
@@ -206,8 +211,12 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          kubectl -n "${K8S_NAMESPACE}" set image "deployment/${DEPLOYMENT_NAME}" "${CONTAINER_NAME}=${IMAGE_SHA}"
-          kubectl -n "${K8S_NAMESPACE}" rollout status "deployment/${DEPLOYMENT_NAME}" --timeout=180s
+          kubectl -n "${K8S_NAMESPACE}" set image \
+            "deployment/${DEPLOYMENT_NAME}" \
+            "${CONTAINER_NAME}=${IMAGE_SHA}"
+          kubectl -n "${K8S_NAMESPACE}" rollout status \
+            "deployment/${DEPLOYMENT_NAME}" \
+            --timeout=180s
 
       # Verify the file generated during the image build.
       - name: Verify wizexercise.txt in running pod
